--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
+  <title>Premiação StartSe</title>
 
   <script src="https://kit.fontawesome.com/8ec406ee8f.js" crossorigin="anonymous"></script>
 
@@ -47,15 +47,85 @@
 
   <main>
     <section id="home">
-      <div class="image">
-        <div class="border-img">
-          <div class="top"></div>
-          <div class="bot"></div>
+      <div class="text-box">
+        <div class="text">
+          <h1>HACKATHON</h1>
+          <h2 id="subtitle">1ª EDIÇÃO PRÉ-STARTSE</h2>
+          <p>O Pré-StartSe é um evento realizado totalmente por alunos, que não tem nenhum tipo de vinculo oficial com a
+            StartSe, com o intuito de ajudar iniciantes a se preparar de forma prática para o evento Tech Academy.</p>
         </div>
-        <img src="/img/home_man.png"
-          alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador">
+        <a href="#">INSCREVA-SE NA SEGUNDA EDIÇÃO</a>
+      </div>
+
+
+      <div class="img-box">
+        <div class="image">
+          <div class="border-img">
+            <div class="top"></div>
+            <div class="bot"></div>
+          </div>
+          <img src="/img/home_man.png"
+            alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador">
+        </div>
+
+        <div class="info-img-box">
+          <div class="info-img">
+            <svg width="35" height="36" viewBox="0 0 35 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.0038 16.9149L17.3385 21.3192L31.7872 6.63831" stroke="white" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M30.3423 18.383V28.6596C30.3423 29.4383 30.0379 30.1851 29.4959 30.7358C28.954 31.2864 28.219 31.5958 27.4526 31.5958H7.22436C6.45795 31.5958 5.72294 31.2864 5.181 30.7358C4.63907 30.1851 4.33462 29.4383 4.33462 28.6596V8.1064C4.33462 7.32768 4.63907 6.58085 5.181 6.03021C5.72294 5.47957 6.45795 5.17023 7.22436 5.17023H23.1179"
+                stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            <div class="info-text">
+              <p>Inscritos:</p>
+              <p>160 devs</p>
+            </div>
+          </div>
+
+          <div class="info-img">
+            <svg width="31" height="33" viewBox="0 0 31 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M15.4923 30.1915C22.495 30.1915 28.1718 24.0473 28.1718 16.4681C28.1718 8.88887 22.495 2.74469 15.4923 2.74469C8.48962 2.74469 2.81282 8.88887 2.81282 16.4681C2.81282 24.0473 8.48962 30.1915 15.4923 30.1915Z"
+                stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M15.4923 8.23404V16.4681L20.5641 19.2128" stroke="white" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+            <div class="info-text">
+              <p>Horas:</p>
+              <p>96h</p>
+            </div>
+          </div>
+
+          <div class="info-img">
+            <svg width="29" height="30" viewBox="0 0 29 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_9_157)">
+                <path
+                  d="M18.8718 26.1383V23.649C18.8718 22.3285 18.3747 21.0622 17.4899 20.1285C16.6051 19.1948 15.4051 18.6702 14.1538 18.6702H5.89742C4.64614 18.6702 3.44612 19.1948 2.56133 20.1285C1.67654 21.0622 1.17947 22.3285 1.17947 23.649V26.1383"
+                  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <path
+                  d="M10.0256 13.6915C12.6313 13.6915 14.7436 11.4624 14.7436 8.71276C14.7436 5.96309 12.6313 3.73404 10.0256 3.73404C7.41998 3.73404 5.30768 5.96309 5.30768 8.71276C5.30768 11.4624 7.41998 13.6915 10.0256 13.6915Z"
+                  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M20.0513 13.6915L22.4102 16.1808L27.1282 11.2021" stroke="white" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round" />
+              </g>
+              <defs>
+                <clipPath id="clip0_9_157">
+                  <rect width="28.3077" height="29.8723" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+
+            <div class="info-text">
+              <p>Equipes:</p>
+              <p>26</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+
+
   </main>
 
   <!-- Separate Popper and Bootstrap JS -->
