secção melhores projetos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="#">Projetos Vencedores</a></li>
+          <li><a href="#winner-project">Projetos Vencedores</a></li>
           <li><a href="#">Todos Projetos</a></li>
           <li><a href="#">Depoimentos</a></li>
           <li><a href="#">Contato</a></li>
@@ -56,8 +56,6 @@
         </div>
         <a href="#">INSCREVA-SE NA SEGUNDA EDIÇÃO</a>
       </div>
-
-
       <div class="img-box">
         <div class="image">
           <div class="border-img">
@@ -125,6 +123,58 @@
       </div>
     </section>
 
+    <section id="winner-project-1">
+      <h2>PROJETOS VENCEDORES</h2>
+      <p>CATEGORIA XXXXX</p>
+      <section class="category-1">
+        <div class="winner-secundary">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exempro-2.png" alt="Projeto Rocket Coffee">
+            </div>
+            <div class="text-description">
+              <h4>2 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+          </div>
+        </div>
+        </div>
+
+        <div class="winner-1">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exemplo.png" alt="Netflix Cópia">
+            </div>
+            <div class="text-description">
+              <h4>1 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="winner-secundary">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exemplo-3.png" alt="Projeto Rocket Coffee">
+            </div>
+            <div class="text-description">
+              <h4>3 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+          </div>
+        </div>
+        </div>
+
+
+
+
+
+      </section>
+    </section>
 
   </main>
 
