pagina de inscrição e ajustes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Premiação StartSe</title>
+  <title>Premiação Pré-StartSe</title>
 
   <script src="https://kit.fontawesome.com/8ec406ee8f.js" crossorigin="anonymous"></script>
 
@@ -36,7 +36,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="#winner-project">Projetos Vencedores</a></li>
+          <li><a href="#winner-project-1">Projetos Vencedores</a></li>
           <li><a href="#">Todos Projetos</a></li>
           <li><a href="#">Depoimentos</a></li>
           <li><a href="#">Contato</a></li>
@@ -54,7 +54,7 @@
           <p>O Pré-StartSe é um evento realizado totalmente por alunos, que não tem nenhum tipo de vinculo oficial com a
             StartSe, com o intuito de ajudar iniciantes a se preparar de forma prática para o evento Tech Academy.</p>
         </div>
-        <a href="#">INSCREVA-SE NA SEGUNDA EDIÇÃO</a>
+        <a href="./subscription.html" target="_blank">INSCREVA-SE NA SEGUNDA EDIÇÃO</a>
       </div>
       <div class="img-box">
         <div class="image">
@@ -168,11 +168,6 @@
           </div>
         </div>
         </div>
-
-
-
-
-
       </section>
     </section>
 
