outras seções de categorias

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </a>
       <nav>
         <ul>
-          <li><a href="#winner-project-1">Projetos Vencedores</a></li>
-          <li><a href="#">Todos Projetos</a></li>
+          <li><a href="#winners-projects">Projetos Vencedores</a></li>
+          <li><a href="#all-projects">Todos Projetos</a></li>
           <li><a href="#">Depoimentos</a></li>
           <li><a href="#">Contato</a></li>
         </ul>
@@ -123,7 +123,8 @@
       </div>
     </section>
 
-    <section id="winner-project-1">
+    <section id="winners-projects"></section>
+    <section class="winner-project">
       <h2>PROJETOS VENCEDORES</h2>
       <p>CATEGORIA XXXXX</p>
       <section class="category-1">
@@ -171,6 +172,108 @@
       </section>
     </section>
 
+    <section class="winner-project two">
+      <h2>PROJETOS VENCEDORES</h2>
+      <p>CATEGORIA XXXXX</p>
+      <section class="category-1">
+        <div class="winner-secundary">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exempro-2.png" alt="Projeto Rocket Coffee">
+            </div>
+            <div class="text-description">
+              <h4>2 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+          </div>
+        </div>
+        </div>
+
+        <div class="winner-1">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exemplo.png" alt="Netflix Cópia">
+            </div>
+            <div class="text-description">
+              <h4>1 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="winner-secundary">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exemplo-3.png" alt="Projeto Rocket Coffee">
+            </div>
+            <div class="text-description">
+              <h4>3 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
+    </section>
+
+    <section class="winner-project">
+      <h2>PROJETOS VENCEDORES</h2>
+      <p>CATEGORIA XXXXX</p>
+      <section class="category-1">
+        <div class="winner-secundary">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exempro-2.png" alt="Projeto Rocket Coffee">
+            </div>
+            <div class="text-description">
+              <h4>2 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+          </div>
+        </div>
+        </div>
+
+        <div class="winner-1">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exemplo.png" alt="Netflix Cópia">
+            </div>
+            <div class="text-description">
+              <h4>1 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="winner-secundary">
+          <div class="winner">
+            <div class="border-winner"></div>
+            <div class="img-winner">
+              <img src="/img/projeto-exemplo-3.png" alt="Projeto Rocket Coffee">
+            </div>
+            <div class="text-description">
+              <h4>3 Lugar</h4>
+              <p>Desafio x - Nome do projeto</p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
+    </section>
+
+
+
+    <section id="all-projects"></section>
+    <section class="winner-project  two all-projects">
+      <h2>TODOS OS PROJETOS</h2>
+    </section>
   </main>
 
   <!-- Separate Popper and Bootstrap JS -->
