seção 'todos os projetos' (owl carousel)

--- a/index.html
+++ b/index.html
@@ -273,6 +273,87 @@
     <section id="all-projects"></section>
     <section class="winner-project  two all-projects">
       <h2>TODOS OS PROJETOS</h2>
+
+
+
+      <div class="slider-group">
+        <div class="title-box">
+
+          <div class="container">
+            <div id="slider" class="owl-carousel">
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exemplo.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+
+
+                </div>
+              </div>
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exemplo-3.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+
+                </div>
+              </div>
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exemplo.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+
+                </div>
+              </div>
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exempro-2.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+
+                </div>
+              </div>
+
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exemplo.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+
+
+                </div>
+              </div>
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exemplo-3.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+
+                </div>
+              </div>
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exemplo.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+
+                </div>
+              </div>
+
+              <div class="content-area">
+                <div class="content">
+                  <div class="img-area"><img src="/img/projeto-exempro-2.png" alt=""></div>
+                  <p>Desafio x - Nome do projeto</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
     </section>
   </main>
 
