--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://kit.fontawesome.com/8ec406ee8f.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="/css/queryes.css">
+  <link rel="stylesheet" href="/css/responsividade.css">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -277,8 +277,6 @@
       </section>
     </section>
 
-
-
     <section class="winner-project two">
       <h2>PROJETOS VENCEDORES</h2>
       <p>MELHOR DESIGNER</p>
@@ -374,8 +372,6 @@
         </div>
       </section>
     </section>
-
-
 
     <section id="all-projects"></section>
     <section class="winner-project  two all-projects">
@@ -594,11 +590,7 @@
 
     </section>
 
-
-
-
     <section id="depoimentos"></section>
-
     <section class="winner-project  two depoimentos">
       <h2>DEPOIMENTOS</h2>
       <div class="slider-group">
@@ -1048,7 +1040,6 @@
       </div>
 
     </section>
-
 
     <section id="contato"></section>
     <section id="contatos">
