Responsividade Parte 3 (470px - 600px)

--- a/index.html
+++ b/index.html
@@ -609,9 +609,8 @@
                         been
                         the
                         industry's standard dummy text ever since the 1500s, when an unknown
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown"</p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"
+                      </p>
                     </div>
                     <div class="depoimentos-contact">
                       <div class="depoimentos-github">
@@ -671,9 +670,8 @@
                         been
                         the
                         industry's standard dummy text ever since the 1500s, when an unknown
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown"</p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"
+                      </p>
                     </div>
                     <div class="depoimentos-contact">
                       <div class="depoimentos-github">
@@ -733,9 +731,8 @@
                         been
                         the
                         industry's standard dummy text ever since the 1500s, when an unknown
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown"</p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"
+                      </p>
                     </div>
                     <div class="depoimentos-contact">
                       <div class="depoimentos-github">
@@ -795,9 +792,8 @@
                         been
                         the
                         industry's standard dummy text ever since the 1500s, when an unknown
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown"</p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"
+                      </p>
                     </div>
                     <div class="depoimentos-contact">
                       <div class="depoimentos-github">
@@ -857,9 +853,8 @@
                         been
                         the
                         industry's standard dummy text ever since the 1500s, when an unknown
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown"</p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"
+                      </p>
                     </div>
                     <div class="depoimentos-contact">
                       <div class="depoimentos-github">
@@ -919,9 +914,8 @@
                         been
                         the
                         industry's standard dummy text ever since the 1500s, when an unknown
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown"</p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"
+                      </p>
                     </div>
                     <div class="depoimentos-contact">
                       <div class="depoimentos-github">
@@ -981,9 +975,8 @@
                         been
                         the
                         industry's standard dummy text ever since the 1500s, when an unknown
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown"</p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"
+                      </p>
                     </div>
                     <div class="depoimentos-contact">
                       <div class="depoimentos-github">
