Responsividade Parte 2 (320px +)

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
 
     <section id="winners-projects"></section>
-    <section class="winner-project">
+    <section class="winner-project padding">
       <h2>PROJETOS VENCEDORES</h2>
       <p>MELHOR PROJETO</p>
       <section class="category-1">
