Resolvendo bug no menu de navegação em todas as resoluções

--- a/subscription.html
+++ b/subscription.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="css/subscription.css">
   <link rel="stylesheet" href="/css/countdown.css">
+  <link rel="stylesheet" href="css/subs_responsividade.css">
 
 
 </head>
