Responsividade Pagina de inscrição

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
     </section>
 
-    <section id="winners-projects"></section>
+    <div id="winners-projects"></div>
     <section class="winner-project padding">
       <h2>PROJETOS VENCEDORES</h2>
       <p>MELHOR PROJETO</p>
@@ -373,7 +373,7 @@
       </section>
     </section>
 
-    <section id="all-projects"></section>
+    <div id="all-projects"></div>
     <section class="winner-project  two all-projects">
       <h2>TODOS OS PROJETOS</h2>
 
@@ -590,7 +590,7 @@
 
     </section>
 
-    <section id="depoimentos"></section>
+    <div id="depoimentos"></div>
     <section class="winner-project  two depoimentos">
       <h2>DEPOIMENTOS</h2>
       <div class="slider-group">
@@ -1034,7 +1034,7 @@
 
     </section>
 
-    <section id="contato"></section>
+    <div id="contato"></div>
     <section id="contatos">
       <h2>CONTATOS</h2>
       <div class="contact-box">
