Vencedores primeira edição

--- a/subscription.html
+++ b/subscription.html
@@ -28,10 +28,9 @@
             StartSe, com o intuito de ajudar iniciantes a se preparar de forma prática para o evento Tech Academy.</p>
         </div>
         <div class="buttons">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSf8FPlkqnZM1ol8LP0v3DwUVWulfhrnq8286tc9R0i8RPYxoQ/viewform"
-            target="_blank">INSCREVA-SE
+          <a target="_blank">INSCREVA-SE
             NA SEGUNDA EDIÇÃO</a>
-          <a href="#">INSCREVA SUA EQUIPE</a>
+          <a>INSCREVA SUA EQUIPE</a>
         </div>
       </div>
       <div class="img-box">
