Declaro abertas as inscrições da segunda edição da pre-startse

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <section class="category-1">
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
@@ -153,7 +153,7 @@
 
         <div class="winner-1">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-DevEdu.png" alt="projeto Dev Edu">
             </div>
@@ -167,7 +167,7 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-MpPlant.png" alt="Projeto MP Plant">
             </div>
@@ -190,7 +190,7 @@
             <div class="img-winner">
               <img src="/img/Projeto-MpPlant.png" alt="Projeto Mp Plant">
             </div>
-            <div class="border-winner"></div>
+            <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="text-description">
               <h4>2 Lugar</h4>
               <p>MP PLANT</p>
@@ -201,7 +201,7 @@
 
         <div class="winner-1">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
@@ -215,7 +215,7 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
@@ -235,7 +235,7 @@
       <section class="category-1">
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
@@ -249,7 +249,8 @@
 
         <div class="winner-1">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://astounding-beignet-9fae44.netlify.app/index.html" target="_blank"
+              class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-ItRecrutiers.PNG" alt="Projeto IT Recruiters">
             </div>
@@ -263,7 +264,8 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://minihackatongrupo6.github.io/projeto-encontre-seu-curso/index.html" target="_blank"
+              class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-FindStack.PNG" alt="Projeto Find">
             </div>
@@ -286,7 +288,7 @@
             <div class="img-winner">
               <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
-            <div class="border-winner"></div>
+            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="text-description">
               <h4>2 Lugar</h4>
               <p>SAÚDE +</p>
@@ -297,7 +299,7 @@
 
         <div class="winner-1">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-MpPlant.png" alt="Projeto Mp Plant">
             </div>
@@ -311,7 +313,7 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
@@ -331,7 +333,7 @@
       <section class="category-1">
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
@@ -345,7 +347,7 @@
 
         <div class="winner-1">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
               <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
@@ -359,7 +361,7 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <div class="border-winner"></div>
+            <a href="https://fmcerqueira79.github.io/StartSe/" class="border-winner" target="_blank"></a>
             <div class="img-winner">
               <img src="/img/Projeto-GreenChain.jpg" alt="Projeto Green Chain">
             </div>
