--- a/subscription.html
+++ b/subscription.html
@@ -28,9 +28,9 @@
             StartSe, com o intuito de ajudar iniciantes a se preparar de forma prática para o evento Tech Academy.</p>
         </div>
         <div class="buttons">
-          <a target="_blank">INSCREVA-SE
+          <a href="https://forms.gle/8AiVTomLj47PM9XaA" target="_blank">INSCREVA-SE
             NA SEGUNDA EDIÇÃO</a>
-          <a>INSCREVA SUA EQUIPE</a>
+          <a href="https://forms.gle/KDV1LtSkqJMzmhBQ9" target="_blank">INSCREVA SUA EQUIPE</a>
         </div>
       </div>
       <div class="img-box">
@@ -42,6 +42,7 @@
           <img src="/img/inscription_man.png"
             alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador">
         </div>
+        <h3>TEMPO RESTANTE PARA INSCRIÇÕES:</h3>
 
         <ul class="countdown">
           <div class="style-countdown">
@@ -84,6 +85,7 @@
             <div>sec</div>
           </li>
         </ul>
+
 
       </div>
     </section>
