Inscrições Encerradas (2° Edição)

--- a/subscription.html
+++ b/subscription.html
@@ -28,9 +28,9 @@
             StartSe, com o intuito de ajudar iniciantes a se preparar de forma prática para o evento Tech Academy.</p>
         </div>
         <div class="buttons">
-          <a href="https://forms.gle/8AiVTomLj47PM9XaA" target="_blank">INSCREVA-SE
+          <a>INSCREVA-SE
             NA SEGUNDA EDIÇÃO</a>
-          <a href="https://forms.gle/KDV1LtSkqJMzmhBQ9" target="_blank">INSCREVA SUA EQUIPE</a>
+          <a>INSCREVA SUA EQUIPE</a>
         </div>
       </div>
       <div class="img-box">
@@ -42,8 +42,9 @@
           <img src="/img/inscription_man.png"
             alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador">
         </div>
-        <h3>TEMPO RESTANTE PARA INSCRIÇÕES:</h3>
+        <h3> INSCRIÇÕES ENCERRADAS !!! </h3>
 
+        <!--
         <ul class="countdown">
           <div class="style-countdown">
             <div class="circle-1-1"></div>
@@ -86,7 +87,7 @@
           </li>
         </ul>
 
-
+-->
       </div>
     </section>
   </main>
